# Drift-ForAMDHACKATHON

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pitch-transcript.md  pitch.srt  pitching-script.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
assets/: calibration_live.json
dashboard/: index.html  package-lock.json  package.json
dashboard/scripts/: make-titlecard.mjs  qa-video.mjs  record-demo.mjs  render-deck.mjs
dashboard/src/: App.jsx  styles.css
deck/: deck.html
drift/: __init__.py  config.py  llm.py
drift/court/: confounders.py  debate.py  defense.py  judge.py  prosecutor.py  rules.py  stats.py
drift/dashboard/: server.py
drift/forecast/: countdown.py  notify.py
drift/ledger/: precision.py  schema.py  schema.sql  store.py
drift/sensor/: calibrate.py  heuristic.py  metrics.py  scorer.py
drift/streams/: degrade.py  generate.py  replay.py
scripts/: go_live_amd.sh
tests/: conftest.py  test_court.py  test_forecast.py  test_ledger.py  test_sensor.py  test_verdicts.py
tests/fixtures/: calibration_set.jsonl  confounder_stream.jsonl  drift_stream.ground_truth.json  drift_stream.jsonl  stable_stream.jsonl
