[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
version = "0.1.0"
description = "DRIFT — early-warning system for AI quality degradation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "scipy>=1.12",
    "numpy>=1.26",
    "ruptures>=1.1",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
pg = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["drift*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The support-doc corpus is data; sentences stay on one line for greppability.
"drift/streams/generate.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["ruptures.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "live: tests that require a real LLM endpoint (deselected by default)",
]
addopts = "-m 'not live'"
